--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </style>
     <link rel="stylesheet" type="text/css" href="css/flowpaper.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome/font-awesome.css" />
+    <link rel="stylesheet" href="webfonts/css/all.min.css">
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.extensions.min.js"></script>
